--- a/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
+++ b/app/views/infrastructures/modal/_modal_manage_schedule.html.erb
@@ -19,14 +19,14 @@
             <div class="row">
               <div class="col-md-6">
                 <%= I18n.t('operation_scheduler.start_date')%> & <%= I18n.t('operation_scheduler.start_time')%><input type="text" v-datepicker="sel_instance.start_date" v-model="sel_instance.start_date" class="form-control" id="op-sched-start">
-                <button class="btn btn-default btn-sm" type="button" @click="sel_instance.start_date = default_start">Default</button>
+                <button class="btn btn-default btn-sm" type="button" @click="set_default_start_sched">Default</button>
                 <span class="help-block">{{default_start}}</span>
               </div>
             </div>
             <div class="row">
               <div class="col-md-6">
                 <%= I18n.t('operation_scheduler.end_date')%> & <%= I18n.t('operation_scheduler.end_time')%><input type="text" v-datepicker="sel_instance.end_date" v-model="sel_instance.end_date" class="form-control" id="op-sched-end">
-                <button class="btn btn-default btn-sm" type="button" @click="sel_instance.end_date = default_end">Default (+1 year)</button>
+                <button class="btn btn-default btn-sm" type="button" @click="set_default_end_sched">Default (+1 year)</button>
                 <span class="help-block">{{default_end}}</span>
                 <input type="hidden">
               </div>
