--- a/app/views/servertests/generator.html.erb
+++ b/app/views/servertests/generator.html.erb
@@ -7,12 +7,10 @@
     <% end %>
   </h2>
 
-  <p>This function is not available now<br />この機能は現在使用することができません</p>
-
-  <% #<div id="vue-serverspec-gen"></div> %>
+  <div id="vue-serverspec-gen"></div>
 
   <div class="row form-actions-top">
-    <button class="btn btn-primary save-serverspec-btn disabled"><%=t('helpers.titles.save')%></button>
+    <button class="btn btn-primary save-serverspec-btn"><%=t('helpers.titles.save')%></button>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
       servertests_path(infrastructure_id: @infra.try(:id)), class: 'btn-default btn' %>
   </div>
