--- a/app/views/dishes/_edit.html.erb
+++ b/app/views/dishes/_edit.html.erb
@@ -1,6 +1,9 @@
 <div class="col-md-12 col-sm-12">
-  <h3 class="page-header">playbook</h3>
-  <p>Sorry, not implemented yet.</p>
+  <%= render partial: 'shared/edit_playbook', locals: {
+    roles: @playbook_roles,
+    playbook_roles: @selected_playbook_roles,
+    extra_vars: @extra_vars,
+  } %>
 </div>
 
 <div class="col-md-12 col-sm-12">
