Update: Dishの編集画面のplaybookの読み込みをajaxに変更

--- a/app/views/dishes/_edit.html.erb
+++ b/app/views/dishes/_edit.html.erb
@@ -1,8 +1,6 @@
 <div class="col-md-12 col-sm-12">
   <%= render partial: 'shared/edit_playbook', locals: {
-    roles: @playbook_roles,
-    playbook_roles: @selected_playbook_roles,
-    extra_vars: @extra_vars,
+    dish: @dish,
   } %>
 </div>
 
